--- a/PalPharmacyApp/src/main/res/layout/activity_main.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_main.xml
@@ -6,33 +6,35 @@
     android:layout_height="match_parent"
     tools:context="com.app.palpharmacy.activities.MainActivity"
     android:background="@color/colorWhite">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerviewid"
-        android:layout_width="400dp"
-        android:layout_height="668dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/edittext"></android.support.v7.widget.RecyclerView>
-
     <EditText
         android:id="@+id/edittext"
-        android:layout_width="342dp"
-        android:layout_height="44dp"
+        android:layout_width="384dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:background="@drawable/search_style"
         android:drawableLeft="@drawable/ic_search_black_24dp"
         android:drawablePadding="8dp"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:hint="Type here to search"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="16dp"
-        android:layout_marginRight="16dp"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.846"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        tools:ignore="MissingConstraints" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerviewid"
+        android:layout_width="411dp"
+        android:layout_height="576dp"
+        android:layout_marginTop="8dp"
+
+        app:layout_constraintTop_toBottomOf="@+id/edittext"
+        app:layout_goneMarginStart="15dp"
+        tools:ignore="MissingConstraints"></android.support.v7.widget.RecyclerView>
+
+
 </android.support.constraint.ConstraintLayout>
