--- a/PalPharmacyApp/src/main/res/layout/activity_main.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_width="411dp"
         android:layout_height="576dp"
         android:layout_marginTop="8dp"
-
+android:layout_marginRight="5dp"
         app:layout_constraintTop_toBottomOf="@+id/edittext"
         app:layout_goneMarginStart="15dp"
         tools:ignore="MissingConstraints"></android.support.v7.widget.RecyclerView>
