--- a/PalPharmacyApp/src/main/res/layout/activity_main.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_main.xml
@@ -6,35 +6,66 @@
     android:layout_height="match_parent"
     tools:context="com.app.palpharmacy.activities.MainActivity"
     android:background="@color/colorWhite">
-    <EditText
-        android:id="@+id/edittext"
-        android:layout_width="384dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/search_style"
-        android:drawableLeft="@drawable/ic_search_black_24dp"
-        android:drawablePadding="8dp"
-        android:hint="Type here to search"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.846"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerviewid"
-        android:layout_width="411dp"
-        android:layout_height="576dp"
-        android:layout_marginTop="8dp"
-android:layout_marginRight="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/edittext"
-        app:layout_goneMarginStart="15dp"
-        tools:ignore="MissingConstraints"></android.support.v7.widget.RecyclerView>
+    <android.support.v4.widget.DrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/draw_layout"
+        android:fitsSystemWindows="true"
+        tools:openDrawer="start">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:id="@+id/toolbar"
+                android:background="@color/colorBlue"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:elevation="4dp"/>
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 
+                <EditText
+                    android:id="@+id/edittext"
+                    android:layout_width="380dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="22dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="@drawable/search_style"
+                    android:drawableLeft="@drawable/ic_search_black_24dp"
+                    android:drawablePadding="8dp"
+                    android:hint="Type here to search"
+                    android:textColor="@color/colorPrimary"
+                    tools:ignore="MissingConstraints" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerviewid"
+                    android:layout_width="match_parent"
+                    android:layout_height="606dp"
+                    android:layout_marginTop="55dp"
+                    tools:ignore="MissingConstraints">
+
+                </android.support.v7.widget.RecyclerView>
+
+            </FrameLayout>
+
+
+         </LinearLayout>
+         <android.support.design.widget.NavigationView
+             android:layout_width="wrap_content"
+             android:id="@+id/nav_view"
+             android:layout_height="match_parent"
+           android:layout_gravity="start"
+             app:headerLayout="@layout/nav_header"
+             app:menu="@menu/drawer_menu"/>
+     </android.support.v4.widget.DrawerLayout>
 </android.support.constraint.ConstraintLayout>
