--- a/PalPharmacyApp/src/main/res/values/styles.xml
+++ b/PalPharmacyApp/src/main/res/values/styles.xml
@@ -11,4 +11,7 @@
     <item name="windowActionBar"> false</item>
     <item name="windowNoTitle">true</item>
 </style>
+    <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground"> @drawable/download</item>
+    </style>
 </resources>
