--- a/PalPharmacyApp/src/main/res/layout/anime_row_item.xml
+++ b/PalPharmacyApp/src/main/res/layout/anime_row_item.xml
@@ -3,8 +3,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:layout_marginTop="5dp"
-    android:background="@drawable/bgg"
+    android:layout_marginTop="8dp"
+    android:background="@drawable/cardstyle"
     android:orientation="horizontal"
     android:padding="8dp">
 
