--- a/PalPharmacyApp/src/main/res/menu/drawer_menu.xml
+++ b/PalPharmacyApp/src/main/res/menu/drawer_menu.xml
@@ -12,32 +12,22 @@
     <item
         android:id="@+id/nav_language"
         android:icon="@drawable/ic_language"
-        android:title="Langugae" />
+        android:title="Language" />
 
     <item
         android:id="@+id/nav_notification"
         android:icon="@drawable/ic_notifications"
         android:title="Notification" />
 
-    <item
-        android:id="@+id/nav_location"
-        android:icon="@drawable/ic_location_on"
-        android:title="Location" />
-
-    <item
-        android:id="@+id/nav_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="Home"
-         />
 
 </group>
-    <item android:id="@+id/nav_share"
-        android:title="Share">
+    <item android:id="@+id/nav_location"
+        android:title="My Location">
         <menu>
 
             <item
-                android:icon="@drawable/ic_share"
-                android:title="Share"/>
+                android:icon="@drawable/ic_location_on"
+                android:title="Location"/>
         </menu>
     </item>
 
