--- a/PalPharmacyApp/src/main/res/layout/anime_row_item.xml
+++ b/PalPharmacyApp/src/main/res/layout/anime_row_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_marginTop="8dp"
-    android:background="@drawable/cardstyle"
+    android:background="@color/colorWhite"
     android:orientation="horizontal"
     android:padding="8dp">
 
