--- a/PalPharmacyApp/src/main/res/layout/fragmentaboutus.xml
+++ b/PalPharmacyApp/src/main/res/layout/fragmentaboutus.xml
@@ -1,15 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/colorGrey">
+    android:background="@color/white">
+
+    <ImageView
+        android:layout_marginTop="18dp"
+        android:layout_width="300dp"
+        android:layout_height="120dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/about" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="We are here to help you find the opened pharmacist which are near you,all you have to do is specify your location "
-        android:textColor="#1E2BAC"
+
+        android:layout_width="match_parent"
+        android:layout_height="478dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="88dp"
         android:gravity="center"
+        android:text="Pal-Pharmacy is a complete system that helps pharmacists to promote for their pharmacy while providing the customers an easy and effective way to look for the nearest pharmacy based on their current location."
+        android:textColor="@color/black"
         android:textSize="24dp"
-        android:textStyle="italic"
-        android:layout_marginTop="300dp"/>
+        android:textStyle="bold|italic" />
+
+
 </RelativeLayout>
