--- a/PalPharmacyApp/src/main/res/layout/anime_row_item.xml
+++ b/PalPharmacyApp/src/main/res/layout/anime_row_item.xml
@@ -6,7 +6,11 @@
     android:layout_marginTop="8dp"
     android:background="@color/colorWhite"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="20dp"
+
+
+
+    >
 
 
     <ImageView
