--- a/PalPharmacyApp/src/main/res/values/colors.xml
+++ b/PalPharmacyApp/src/main/res/values/colors.xml
@@ -2,9 +2,18 @@
 <resources>
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#ccc</color>
     <color name="colorGrey1">#666</color>
-    <color name="colorBlue">#0097FC</color>
+    <color name="colorBlue">@android:color/holo_blue_dark</color>
+    <color name="card_bg_dark_color">#0e0e0e</color>
+    <color name="content_text_color">#999da4</color>
+
+
+    <color name="card_bg_color">#f6f6f6</color>
+    <color name="colorAccent">#258bd6</color>
+
+
+    <color name="white" >#ffffff</color>
+    <color name="black" >#000000</color>
 </resources>
