--- a/PalPharmacyApp/src/main/res/layout/activity_anime.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_anime.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
+    android:background="@color/colorAccent"
     tools:context="com.app.palpharmacy.activities.PharmacyDetailsActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -64,7 +64,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="Category" />
+                        android:text="OPEN TIME:" />
 
 
                     <TextView
