--- a/PalPharmacyApp/src/main/res/layout/activity_main.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_main.xml
@@ -36,10 +36,9 @@
 
                 <EditText
                     android:id="@+id/edittext"
-                    android:layout_width="380dp"
+                    android:layout_width="392dp"
                     android:layout_height="45dp"
-                    android:layout_marginStart="18dp"
-                    android:ems="10"
+                    android:layout_marginStart="11dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="22dp"
@@ -47,10 +46,10 @@
                     android:background="@drawable/search_style"
                     android:drawableLeft="@drawable/ic_search_black_24dp"
                     android:drawablePadding="8dp"
+                    android:ems="10"
                     android:hint="Type here to search"
                     android:inputType="text"
-                    android:textColor="@color/colorPrimary"
-                    />
+                    android:textColor="@color/colorPrimary" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerviewid"
