--- a/PalPharmacyApp/src/main/res/drawable/cardstyle.xml
+++ b/PalPharmacyApp/src/main/res/drawable/cardstyle.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="#FFFFFF"/>
-    <corners android:radius="32dp"/>
+    <corners android:radius="25dp"/>
     <padding android:right="12dp"
         android:bottom="12dp"
         android:left="12dp"
-        android:top="12dp"/>
+        android:top="12dp"
+        />
+
 </shape>
