--- a/PalPharmacyApp/src/main/res/layout/activity_anime.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_anime.xml
@@ -39,8 +39,9 @@
 
                 <ImageView
                     android:id="@+id/aa_thumbnail"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:background="@drawable/loading_shape" />
 
                 <LinearLayout
@@ -63,29 +64,35 @@
                         android:id="@+id/aa_categorie"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="OPEN TIME:" />
-
+                        android:layout_marginTop="7dp"
+                        android:text="Opening_Time:" />
 
                     <TextView
                         android:id="@+id/aa_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/rating_background"
-                        android:drawableLeft="@drawable/ic_star_black_24dp"
-                        android:paddingRight="5dp"
-                        android:text="0.0"
-                        android:textColor="#fff"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
+                        android:layout_marginTop="5dp"
+                        android:text="Closing_Time:" />
 
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/aa_rating"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:background="@drawable/rating_background"-->
+<!--                        android:drawableLeft="@drawable/ic_star_black_24dp"-->
+<!--                        android:paddingRight="5dp"-->
+<!--                        android:text="0.0"-->
+<!--                        android:textColor="#fff"-->
+<!--                        android:textSize="15sp"-->
+<!--                        android:textStyle="bold" />-->
                     <TextView
                         android:id="@+id/aa_studio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="Studio" />
+                        android:text="Phone Number:" />
 
 
                 </LinearLayout>
