--- a/PalPharmacyApp/src/main/res/layout/activity_anime.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_anime.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,88 +18,43 @@
             android:id="@+id/collapsingtoolbar_id"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/colorBlue"
             app:contentScrim="@color/colorWhite"
             app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginStart="20dp"
             app:layout_scrollFlags="exitUntilCollapsed|scroll"
-            app:title="Anime Title">
+            app:title="Anime Title"
+            >
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:theme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin"></android.support.v7.widget.Toolbar>
+                app:layout_collapseMode="pin">
+
+            </android.support.v7.widget.Toolbar>
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="50dp">
+            <!--           <TextView
+                          android:id="@+id/aa_rating"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_marginTop="5dp"
+                           android:text="Closing_Time:" />
 
-
-                <ImageView
-                    android:id="@+id/aa_thumbnail"
-                    android:layout_marginRight="10dp"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:background="@drawable/loading_shape" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="130dp"
-                    android:layout_margin="8dp"
-                    android:orientation="vertical">
-
-
-                    <TextView
-                        android:id="@+id/aa_anime_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Anime Title"
-                        android:textColor="@color/colorBlue"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/aa_categorie"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="7dp"
-                        android:text="Opening_Time:" />
-
-                    <TextView
-                        android:id="@+id/aa_rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="Closing_Time:" />
-
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/aa_rating"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:background="@drawable/rating_background"-->
-<!--                        android:drawableLeft="@drawable/ic_star_black_24dp"-->
-<!--                        android:paddingRight="5dp"-->
-<!--                        android:text="0.0"-->
-<!--                        android:textColor="#fff"-->
-<!--                        android:textSize="15sp"-->
-<!--                        android:textStyle="bold" />-->
-                    <TextView
-                        android:id="@+id/aa_studio"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="Phone Number:" />
-
-
-                </LinearLayout>
-
-
-            </LinearLayout>
+       -->
+            <!--                    <TextView-->
+            <!--                        android:id="@+id/aa_rating"-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:layout_marginTop="10dp"-->
+            <!--                        android:background="@drawable/rating_background"-->
+            <!--                        android:drawableLeft="@drawable/ic_star_black_24dp"-->
+            <!--                        android:paddingRight="5dp"-->
+            <!--                        android:text="0.0"-->
+            <!--                        android:textColor="#fff"-->
+            <!--                        android:textSize="15sp"-->
+            <!--                        android:textStyle="bold" />-->
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -106,19 +62,255 @@
 
     </android.support.design.widget.AppBarLayout>
 
+
+    <ImageView
+        android:id="@+id/aa_thumbnail"
+        android:layout_width="222dp"
+        android:layout_height="198dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/loading_shape" />
+
+
+
+    <TextView
+        android:id="@+id/aa_anime_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Anime Title"
+        android:textColor="@color/colorBlue"
+        android:textSize="15dp"
+        android:textStyle="italic"
+
+
+        />
+
+    <TextView
+        android:id="@+id/aa_categorie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/aa_rating"
+        android:layout_marginLeft="112dp"
+        android:layout_marginTop="23dp"
+        android:text="Closing_Time:"
+        android:textColor="#999999"
+        android:textSize="15dp"
+
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/aa_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/aa_phone_number"
+        android:layout_marginLeft="112dp"
+        android:layout_marginTop="22dp"
+        android:text="Opening_Time:"
+        android:textColor="#999999"
+        android:textSize="15dp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/aa_phone_number"
+        android:layout_width="68dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/aa_vaction"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="22dp"
+        android:text="275"
+        android:textColor="#999999"
+        android:textSize="15dp"
+        android:textStyle="italic" />
+    <TextView
+        android:id="@+id/phonedef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/aa_vaction"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="15dp"
+        android:text="Phone Number :"
+        android:drawableLeft="@drawable/ic_phone_black_24dp"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:textSize="14dp">
+
+
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/aa_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="270dp"
+        android:layout_marginTop="320dp"
+        android:text="Bethlehem"
+        android:textColor="#999999"
+        android:textSize="15dp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/aa_region"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="320dp"
+        android:text="West Bank"
+        android:textColor="#999999"
+        android:textSize="15dp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="320dp"
+        android:text=","
+        android:textColor="#999999"
+        android:textSize="15dp"
+        android:textStyle="italic" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="263dp"
+        android:layout_marginTop="320dp"
+        android:text=","
+        android:textColor="#999999"
+        android:textSize="15dp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/aa_governerate"
+        android:layout_width="89dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="185dp"
+        android:layout_marginTop="320dp"
+        android:text="governerate"
+        android:textColor="#999999"
+        android:textSize="15dp"
+        android:textStyle="italic" />
+    <TextView
+        android:id="@+id/citydef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="320dp"
+        android:layout_marginLeft="15dp"
+        android:text="Address :"
+        android:drawableLeft="@drawable/ic_location_on"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:textSize="14dp">
+
+
+    </TextView>
+    <TextView
+        android:id="@+id/vacationdef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/citydef"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:text="Vacation:"
+        android:drawableLeft="@drawable/ic_vacation"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:textSize="14dp">
+
+
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/aa_vaction"
+        android:layout_width="104dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/aa_city"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="20dp"
+        android:text="Vac"
+        android:textColor="#999999"
+        android:textSize="15dp"
+        android:textStyle="italic" />
+<TextView
+    android:id="@+id/lockdef"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/aa_phone_number"
+    android:layout_marginTop="20dp"
+    android:layout_marginLeft="15dp"
+    android:text="Opens at:"
+    android:drawableLeft="@drawable/ic_lock_open_black_24dp"
+    android:drawablePadding="5dp"
+    android:gravity="center"
+    android:textColor="@color/colorPrimary"
+    android:textStyle="bold"
+    android:textSize="14dp">
+
+
+
+</TextView>
+    <TextView
+        android:id="@+id/opendef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lockdef"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="15dp"
+        android:text="Closes at:"
+        android:drawableLeft="@drawable/ic_lock_black_24dp"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:textSize="14dp">
+
+
+
+    </TextView>
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
-            android:id="@+id/aa_description"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Anime Description"
-            android:textColor="#999999" />
 
     </android.support.v4.widget.NestedScrollView>
 
-</android.support.design.widget.CoordinatorLayout>
+    <Button
+        android:id="@+id/phonebtn"
+        android:layout_width="170dp"
+        android:gravity="center"
+        android:layout_height="57dp"
+        android:layout_below="@id/aa_phone_number"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="120dp"
+        android:background="@color/colorBlue"
+        android:text="Call now"
+        android:textStyle="bold"
+        android:textSize="16dp"
+        android:textColor="#FFFFFF">
+    </Button>
+
+<Button
+    android:id="@+id/buttonmap"
+    android:textStyle="bold"
+    android:layout_width="170dp"
+    android:layout_height="57dp"
+    android:text="View Map"
+    android:textSize="16dp"
+    android:background="@color/colorBlue"
+    android:layout_marginTop="120dp"
+    android:textColor="#FFFFFF"
+    android:layout_marginLeft="210dp"
+    android:layout_below="@id/aa_phone_number">
+</Button>
+
+</RelativeLayout>
