--- a/PalPharmacyApp/src/main/res/layout/activity_main.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_main.xml
@@ -2,16 +2,16 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.app.palpharmacy.activities.MainActivity"
     android:background="@color/colorGrey"
-    android:id="@+id/root_layout">
+    tools:context="com.app.palpharmacy.activities.MainActivity">
 
     <android.support.v4.widget.DrawerLayout
+        android:id="@+id/draw_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/draw_layout"
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
@@ -21,13 +21,13 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:id="@+id/toolbar"
                 android:background="@color/colorBlue"
+                android:elevation="4dp"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                android:elevation="4dp"/>
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
             <FrameLayout
                 android:id="@+id/fragment_container"
@@ -36,17 +36,16 @@
 
                 <EditText
                     android:id="@+id/edittext"
-                    android:layout_width="392dp"
+                    android:layout_width="395dp"
                     android:layout_height="45dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="22dp"
                     android:layout_marginRight="24dp"
                     android:background="@drawable/search_style"
                     android:drawableLeft="@drawable/ic_search_black_24dp"
                     android:drawablePadding="8dp"
-                    android:ems="10"
                     android:hint="Type here to search"
                     android:inputType="text"
                     android:textColor="@color/colorPrimary" />
@@ -59,33 +58,22 @@
                     tools:ignore="MissingConstraints">
 
 
-
                 </android.support.v7.widget.RecyclerView>
 
             </FrameLayout>
 
 
+        </LinearLayout>
 
-         </LinearLayout>
-
-         <android.support.design.widget.NavigationView
-             android:layout_width="wrap_content"
-             android:id="@+id/nav_view"
-             android:layout_height="match_parent"
-           android:layout_gravity="start"
-             app:headerLayout="@layout/nav_header"
-             app:menu="@menu/drawer_menu"/>
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header"
+            app:menu="@menu/drawer_menu" />
 
     </android.support.v4.widget.DrawerLayout>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_switcher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_brightness_2_white_24dp"/>
+
 
 </android.support.constraint.ConstraintLayout>
