--- a/PalPharmacyApp/src/main/res/layout/plan.xml
+++ b/PalPharmacyApp/src/main/res/layout/plan.xml
@@ -5,15 +5,23 @@
     >
 
     <TextView
-        android:layout_width="400dp"
-        android:layout_height="351dp"
-        android:layout_marginLeft="10dp"
+        android:layout_width="345dp"
+        android:layout_height="475dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="200dp"
-        android:gravity="center|center_vertical"
-        android:text="We always care for your satisfaction and because of that we keep growing everyday, Therefore we will show you the categories that every pharmacy has and you can choose your favourite pharmacy so you will recieve the latest categories  the pharmacist addd "
-        android:textColor="#000000"
-        android:textSize="24dp" />
+        android:gravity="fill_vertical|fill_horizontal"
+        android:text="We always care for your satisfaction and because of that we keep growing everyday, Therefore we will show you the categories that every pharmacy has and you can choose your favourite pharmacy so you will recieve the latest categories  the pharmacist add. "
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20dp"
+        android:textStyle="bold|italic" />
 
+    <ImageView
+        android:layout_width="222dp"
+        android:layout_height="208dp"
+        android:layout_marginLeft="100dp"
+        android:src="@drawable/planb">
+
+    </ImageView>
 
 
 </RelativeLayout>
