--- a/PalPharmacyApp/src/main/res/layout/anime_row_item.xml
+++ b/PalPharmacyApp/src/main/res/layout/anime_row_item.xml
@@ -4,14 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_marginTop="8dp"
+    android:elevation="10dp"
     android:background="@drawable/cardstyle"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
     android:orientation="horizontal"
     android:padding="20dp"
-
-
-
     >
 
 
@@ -33,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Anime Title"
-            android:textColor="@color/colorBlue"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             android:textStyle="bold" />
         <TextView
@@ -42,9 +40,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="City"
-            android:textColor="@color/colorGrey1" />
+            android:textColor="@color/colorGrey1"/>
 
-
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Status"
+            android:textColor="@color/colorGrey1"/>
     </LinearLayout>
 
 
