--- a/PalPharmacyApp/src/main/res/layout/activity_anime.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_anime.xml
@@ -18,8 +18,7 @@
             android:id="@+id/collapsingtoolbar_id"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorBlue"
-            app:contentScrim="@color/colorWhite"
+            android:background="@color/colorAccent"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="20dp"
             app:layout_scrollFlags="exitUntilCollapsed|scroll"
@@ -74,59 +73,59 @@
 
 
 
+<!--    <TextView-->
+<!--        android:id="@+id/aa_anime_name"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Anime Title"-->
+<!--        android:textColor="@color/colorBlue"-->
+<!--        android:textSize="15dp"-->
+<!--        android:textStyle="italic"-->
+
+
+<!--        />-->
+
     <TextView
-        android:id="@+id/aa_anime_name"
+        android:id="@+id/closing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Anime Title"
-        android:textColor="@color/colorBlue"
-        android:textSize="15dp"
-        android:textStyle="italic"
-
-
-        />
-
-    <TextView
-        android:id="@+id/aa_categorie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/aa_rating"
+        android:layout_below="@id/opening"
         android:layout_marginLeft="112dp"
         android:layout_marginTop="23dp"
         android:text="Closing_Time:"
-        android:textColor="#999999"
+        android:textColor="@color/colorGrey1"
         android:textSize="15dp"
 
         android:textStyle="italic" />
 
     <TextView
-        android:id="@+id/aa_rating"
+        android:id="@+id/opening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/aa_phone_number"
+        android:layout_below="@id/phone_number"
         android:layout_marginLeft="112dp"
         android:layout_marginTop="22dp"
         android:text="Opening_Time:"
-        android:textColor="#999999"
+        android:textColor="@color/colorGrey1"
         android:textSize="15dp"
         android:textStyle="italic" />
 
     <TextView
-        android:id="@+id/aa_phone_number"
+        android:id="@+id/phone_number"
         android:layout_width="68dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/aa_vaction"
+        android:layout_below="@id/vaction"
         android:layout_marginLeft="150dp"
         android:layout_marginTop="22dp"
         android:text="275"
-        android:textColor="#999999"
+        android:textColor="@color/colorGrey1"
         android:textSize="15dp"
         android:textStyle="italic" />
     <TextView
         android:id="@+id/phonedef"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/aa_vaction"
+        android:layout_below="@+id/vaction"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"
         android:text="Phone Number :"
@@ -142,56 +141,39 @@
     </TextView>
 
     <TextView
-        android:id="@+id/aa_city"
+        android:id="@+id/city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="270dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginLeft="187dp"
+        android:layout_marginTop="322dp"
         android:text="Bethlehem"
-        android:textColor="#999999"
+        android:textColor="@color/colorGrey1"
         android:textSize="15dp"
         android:textStyle="italic" />
 
     <TextView
-        android:id="@+id/aa_region"
+        android:id="@+id/region"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="110dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="322dp"
         android:text="West Bank"
-        android:textColor="#999999"
+        android:textColor="@color/colorGrey1"
         android:textSize="15dp"
         android:textStyle="italic" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="38dp"
         android:layout_marginLeft="180dp"
         android:layout_marginTop="320dp"
         android:text=","
-        android:textColor="#999999"
+        android:textColor="@color/colorGrey1"
         android:textSize="15dp"
-        android:textStyle="italic" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="263dp"
-        android:layout_marginTop="320dp"
-        android:text=","
-        android:textColor="#999999"
-        android:textSize="15dp"
-        android:textStyle="italic" />
+         />
 
-    <TextView
-        android:id="@+id/aa_governerate"
-        android:layout_width="89dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="185dp"
-        android:layout_marginTop="320dp"
-        android:text="governerate"
-        android:textColor="#999999"
-        android:textSize="15dp"
-        android:textStyle="italic" />
+
+
     <TextView
         android:id="@+id/citydef"
         android:layout_width="wrap_content"
@@ -228,21 +210,21 @@
     </TextView>
 
     <TextView
-        android:id="@+id/aa_vaction"
+        android:id="@+id/vaction"
         android:layout_width="104dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/aa_city"
+        android:layout_below="@id/city"
         android:layout_marginLeft="110dp"
         android:layout_marginTop="20dp"
         android:text="Vac"
-        android:textColor="#999999"
+        android:textColor="@color/colorGrey1"
         android:textSize="15dp"
         android:textStyle="italic" />
 <TextView
     android:id="@+id/lockdef"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_below="@+id/aa_phone_number"
+    android:layout_below="@+id/phone_number"
     android:layout_marginTop="20dp"
     android:layout_marginLeft="15dp"
     android:text="Opens at:"
@@ -289,10 +271,10 @@
         android:layout_width="170dp"
         android:gravity="center"
         android:layout_height="57dp"
-        android:layout_below="@id/aa_phone_number"
+        android:layout_below="@id/phone_number"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="120dp"
-        android:background="@color/colorBlue"
+        android:background="@color/colorAccent"
         android:text="Call now"
         android:textStyle="bold"
         android:textSize="16dp"
@@ -306,11 +288,11 @@
     android:layout_height="57dp"
     android:text="View Map"
     android:textSize="16dp"
-    android:background="@color/colorBlue"
+    android:background="@color/colorAccent"
     android:layout_marginTop="120dp"
     android:textColor="#FFFFFF"
     android:layout_marginLeft="210dp"
-    android:layout_below="@id/aa_phone_number">
+    android:layout_below="@id/phone_number">
 </Button>
 
 </RelativeLayout>
