--- a/PalPharmacyApp/src/main/res/layout/activity_map.xml
+++ b/PalPharmacyApp/src/main/res/layout/activity_map.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:title="Map"
-        android:background="@color/colorBlue"
+        android:background="@drawable/gradient"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
