--- a/PalPharmacyApp/src/main/res/layout/plan.xml
+++ b/PalPharmacyApp/src/main/res/layout/plan.xml
@@ -5,15 +5,19 @@
     >
 
     <TextView
-        android:layout_width="345dp"
-        android:layout_height="475dp"
-        android:layout_marginLeft="30dp"
+        android:layout_width="382dp"
+        android:layout_height="232dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="200dp"
         android:gravity="fill_vertical|fill_horizontal"
-        android:text="We always care for your satisfaction and because of that we keep growing everyday, Therefore we will show you the categories that every pharmacy has and you can choose your favourite pharmacy so you will recieve the latest categories  the pharmacist add. "
+        android:shadowColor="@color/colorGrey1"
+        android:shadowDx="10"
+        android:shadowDy="10"
+        android:shadowRadius="15"
+        android:text="We always care for your satisfaction and because of that we keep growing everyday, Therefore we will show you the products that every pharmacy has and you can choose your favourite pharmacy so you will recieve the latest products the pharmacist add. "
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20dp"
-        android:textStyle="bold|italic" />
+        android:textStyle="italic" />
 
     <ImageView
         android:layout_width="222dp"
