--- a/PalPharmacyApp/src/main/res/layout/tellafriend.xml
+++ b/PalPharmacyApp/src/main/res/layout/tellafriend.xml
@@ -40,11 +40,14 @@
 
     <Button
         android:id="@+id/button_send"
-        android:layout_width="206dp"
-        android:layout_marginLeft="70dp"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="110dp"
+        android:background="@drawable/gradient"
         android:onClick="viewdata"
         android:text="send"
-        />
+        android:textStyle="bold"
+        android:textColor="@color/colorWhite"/>
 
 </LinearLayout>
